--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,7 +61,7 @@ h1,h2,h3,h4 {
     font-weight: 300;
     margin-top: 25px;
     margin-bottom: 40px;
-    
+
 }
 /*-----------------------------------------Heading */
 
@@ -209,4 +209,15 @@ footer {
 
 #footer-details {
     padding: 20px;
+}
+
+/*-----------------------------------------Three Reasons */
+
+.three-reasons-icon {
+    font-size: 26px;
+    color: #e67e22;
+}
+
+.three-reasons-heading {
+    margin-bottom:15px;
 }
