added page links

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -227,31 +227,35 @@ footer {
 
 /*----------------------------------------- personal info */
 
-
-.Personal-info-item {
+.personal-info-item {
     margin-bottom: 20px;
     display: block;
     clear: both;
 }
 
-.Personal-info-item .key,
-.Personal-info-item .value {
+.personal-info-item .key,
+.personal-info-item .value {
     padding-right: 8px;
     display: inline-block;
 }
 
-.Personal-info-item .key {
+.personal-info-item .key p,
+.personal-info-item .value p {
+    margin: 0;
+}
+
+.personal-info-item .key {
         width: 30%;
         margin-right: 21px;
         padding-top: 2px;
         vertical-align:  top;
     }
 
-.Personal-info-item .key p {
+.personal-info-item .key p {
     font-weight: 700;
 
 }
-.Personal-info-item .value {
+.personal-info-item .value {
     position: relative;
     width: 60%;
             
